# grab

./: .gitignore  LICENSE  README.md  pyproject.toml
src/grab/: __init__.py  article.py  cli.py  cobalt.py  compress.py  config.py  detect.py  download.py  gif.py  image.py  naming.py  obsidian.py  pdf.py  podcast.py  presets.py  probe.py  summarize.py  transcribe.py  util.py
