[project]
name = "grab"
version = "0.1.0"
description = "Download and compress media for target platforms"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
grab = "grab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grab"]
