[project]
name = "grab"
version = "0.1.0"
description = "Download and compress media for target platforms"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
grab = "grab.cli:main"

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
summarize = ["ollama>=0.4"]
pdf = ["pymupdf>=1.24"]
article = ["trafilatura>=1.6"]
all = ["grab[transcribe,summarize,pdf,article]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grab"]
